assets/css/_bookmarks.scss
div.bookmarks {
    display: block flex;
    flex-direction: column;
    overflow: hidden;
    flex-grow: 1;
    min-width: 0;
}

div.bookmark-card {
    display: block flex;
    flex-flow: row-reverse;
    flex-grow: 1;
    justify-content: flex-end;

    & > .icons {
        border-top-color: $light-gray;
        border-top-style: solid;
        border-top-width: 1px;
        background-color: $washed-gray;
        max-width: $font-normal;
        min-width: $font-normal;
        padding-bottom: 2px;
        padding-top: 4px;

        & > span {
            display: inline-block;
            line-height: 1.2em;
            margin-bottom: 2px;
            margin-top: 2px;

            &[data-icon-type='private'] {
                content: hidden($blue);
                @media (prefers-color-scheme: dark) {
                    content: hidden($bright-blue);
                }
            }

            &[data-icon-type='unread'] {
                content: later($blue);
                @media (prefers-color-scheme: dark) {
                    content: later($bright-blue);
                }
            }
        }

        @media (prefers-color-scheme: dark) {
            border-top-color: $gray;
            background-color: $dark-gray;
        }
    }
}

div.bookmark {
    flex-grow: 1;
    overflow: hidden;
    padding-bottom: 2px;
    position: relative;
    background-clip: content-box;

    & > div:first-child {
        border-top-color: $light-gray;
        border-top-style: solid;
        border-top-width: 1px;

        @media (prefers-color-scheme: dark) {
            border-top-color: $gray;
        }
    }

    & > div {
        padding-left: $spacing-tiny;
    }

    @media #{$large} {
        padding-right: 2 * $spacing-large;
    }

    & > .title {
        display: flex;
        justify-content: space-between;
        padding-top: 4px;

        @media #{$large} {
            position: relative;

            & a.savers[data-count='0'], & a.savers[data-count='1'] {
                display: none;
            }

            & a.savers {
                background-color: $blue;
                color: $white;
                display: block;
                font-size: $font-normal;
                font-weight: bold;
                padding: $spacing-tiny;
                margin-top: -5px;
                border-top: 1px;
                border-top-color: $dark-blue;
                border-top-style: solid;

                &::before {
                    content: attr(data-count);
                }

                &:hover {
                    background-color: $green;
                    border-top-color: $dark-green;
                    text-decoration: none;

                    @media #{$large} {
                        &::after {
                            color: $gray;
                            content: attr(data-label);
                            font-size: $font-tiny;
                            font-weight: normal;
                            margin-left: $spacing-tiny + $spacing-small;
                            margin-top: 2px;
                            position: absolute;
                            text-transform: uppercase;

                            @media (prefers-color-scheme: dark) {
                                color: $muted-dark;
                            }
                        }
                    }

                    @media (prefers-color-scheme: dark) {
                        background-color: $bright-green;
                    }
                }

                @media (prefers-color-scheme: dark) {
                    background-color: $bright-blue;
                }
            }
        }

        & > h4 {
            flex-grow: 1;
            flex-shrink: 1;
            min-width: 10%;

            @include link-title();
        }
    }

    & > .full-url {
        @include link-url();
    }

    & > .description {
        font-size: $font-small;
        height: auto;
        line-height: 1.4em;
        overflow: hidden;
        padding-bottom: $spacing-tiny;
        //width: 100%;

        & p {
            margin: 0;
        }

        & > pre {
            overflow-x: auto;
        }
    }

    & > .ownership {
        color: $muted;
        font-size: $font-tiny;
        margin-bottom: $spacing-tiny;

        @media (prefers-color-scheme: dark) {
            color: $muted-dark;
        }

        & > span {
            display: inline;
        }

        & > span:not(:first-child)::before {
            content: '\00B7';
        }
    }

    & > .ownership > .savers {
        color: $muted;
        font-size: $font-tiny;
        margin-bottom: $spacing-tiny;

        @media (prefers-color-scheme: dark) {
            color: $muted-dark;
        }

        @media #{$large} {
            display: none;
        }
    }

    .meta {
        display: flex;
        flex-direction: row-reverse;
        justify-content: flex-end;
        margin-top: 2px;

        @media #{$not-small} {
            justify-content: space-between;
        }

        & h5.label {
            @media #{$not-small} {
                display: none;
            }
        }

        & > div.actions {
            flex-shrink: 0;
            margin-right: $spacing-medium;

            @include link-actions();
        }

        & > div.tags {
            @media #{$not-small} {
                margin-left: auto;
            }

            & > ul.tags {
                display: inline;
                font-size: $font-tiny;
                list-style: none;
                margin: 0;
                padding: 0;

                @media #{$not-small} {
                    text-align: right;
                }

                @media #{$large} {
                    &:hover::after {
                        color: $gray;
                        content: attr(data-label);
                        font-size: $font-tiny;
                        font-weight: normal;
                        margin-top: 2px;
                        margin-left: $spacing-small;
                        position: absolute;
                        text-transform: uppercase;

                        @media (prefers-color-scheme: dark) {
                            color: $muted-dark;
                        }
                    }
                }

                & > li {
                    display: inline-block;

                    & > a {
                        color: $purple;
                        display: inline;

                        @media (prefers-color-scheme: dark) {
                            color: $bright-purple;
                        }

                    }

                    &:not(:last-child)::after {
                        content: ',\00a0';
                    }

                    @media #{$not-small} {
                        &:last-child {
                            margin-right: $spacing-tiny;
                        }
                    }
                }
            }
        }
    }

    @media (prefers-color-scheme: dark) {
        background-color: $card-background-dark;
    }
}

// URL detail page

.url-detail-header {
    padding: $spacing-small $spacing-tiny;
    border-color: $dark-gray;
    border-width: 1px 0 0 0;
    border-style: solid;

    & > .title > h3 {
        margin: 0;

        @include link-title();
    }

    & > .full-url {
        @include link-url();
    }

    & > .metadata {
        color: $muted;
        font-size: $font-tiny;
        margin-top: $spacing-tiny;

        & > span:not(:first-child)::before {
            content: '\00B7';
            margin: 0 $spacing-tiny;
        }

        @media (prefers-color-scheme: dark) {
            color: $muted-dark;
        }
    }
}

.spark-chart {
    display: block;
    margin: $spacing-tiny 0;

    .spark-hit-area {
        fill: transparent;
        pointer-events: all;
    }

    .spark-bar {
        fill: $dark-green;
        pointer-events: none;

        @media (prefers-color-scheme: dark) {
            fill: $bright-green;
        }
    }

    .spark-empty {
        fill: $light-gray;
        pointer-events: none;

        @media (prefers-color-scheme: dark) {
            fill: $dark-gray;
        }
    }

    .spark-bucket:hover {
        .spark-hit-area {
            fill: rgba(0, 0, 0, 0.05);

            @media (prefers-color-scheme: dark) {
                fill: rgba(255, 255, 255, 0.1);
            }
        }

        .spark-bar {
            fill: $bright-green;

            @media (prefers-color-scheme: dark) {
                fill: $light-green;
            }
        }

        .spark-empty {
            fill: $bright-gray;

            @media (prefers-color-scheme: dark) {
                fill: $gray;
            }
        }
    }
}

